// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cgsflbe soui-divider-wrapper ciw1sq5 soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cgsflbe soui-divider-wrapper ciw1sq5 soui-divider-horizontal c-sxuxpg soui-divider-with-text cfrfx3l soui-divider-with-text-center"
  >
    <span
      class="c2ldzwa soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cgsflbe soui-divider-wrapper ciw1sq5 soui-divider-horizontal c-sxuxpg soui-divider-with-text cviad4z soui-divider-with-text-left"
  >
    <span
      class="c2ldzwa soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="cgsflbe soui-divider-wrapper ciw1sq5 soui-divider-horizontal c-sxuxpg soui-divider-with-text c-hla4bk soui-divider-with-text-right"
  >
    <span
      class="c2ldzwa soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
